# event-manager

./: CHANGELOG.md  CODEOWNERS  Cargo.toml  README.md  coverage_config.json  coverage_config_aarch64.json  coverage_config_x86_64.json
.buildkite/: custom-pipeline.yml  custom-tests.json
.github/: dependabot.yml
benches/: main.rs
docs/: DESIGN.md  DEVELOPMENT.md
src/: endpoint.rs  epoll.rs  events.rs  lib.rs  manager.rs  subscribers.rs  vector_single_thread.rs
src/utilities/: subscribers.rs
tests/: basic_event_manager.rs  endpoint.rs  multi_threaded.rs  negative_tests.rs  regressions.rs
tests/subscribers/: mod.rs
