[package]
name = "event-manager"
version = "0.3.0"
description = "Abstractions for implementing event based systems"
keywords = ["events"]
repository = "https://github.com/rust-vmm/event-manager"
readme = "README.md"
authors = ["rust-vmm AWS maintainers <rust-vmm-maintainers@amazon.com>"]
license = "Apache-2.0 OR BSD-3-Clause"
edition = "2021"

[dependencies]
vmm-sys-util = "0.11.0"
libc = { version = "0.2.39", features = ["extra_traits"] }

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"

[[bench]]
name = "main"
harness = false