[package]
name = "event-manager"
version = "0.4.2"
description = "Abstractions for implementing event based systems"
keywords = ["events"]
repository = "https://github.com/rust-vmm/event-manager"
readme = "README.md"
authors = ["rust-vmm AWS maintainers <rust-vmm-maintainers@amazon.com>"]
license = "Apache-2.0 OR BSD-3-Clause"
edition = "2021"

[dependencies]
vmm-sys-util = ">=0.12.1,<=0.15.0"
libc = "0.2.39"

[dev-dependencies]
criterion = "0.6.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
remote_endpoint = []
test_utilities = []

[[bench]]
name = "main"
harness = false

[lib]
bench = false # https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options

[profile.bench]
lto = true
codegen-units = 1
